Draft of 2206.md
Signed-off-by: WenTao Ou <admin@owent.net>

--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -233,6 +233,114 @@ auto f = t.then(
 
 ### `some()`, `any()` 和 `all()`
 
+在某些场景中，我们需要使用到 `some()`, `any()` 和 `all()` 的功能。比如在批量保存场景中，我们可以起一批保存任务，然后 `co_await all(tasks...);` 。又或者在我们服务器的分布式事务系统中，实现了 [Read Your Writes][4] 一致性模型，在这个模型中假设有 **N** 个副本，只要读副本数 **R** + 写成功副本数 **W** > **N** 时，即可认为事务成功。那么我们发起 **N** 个写请求是不需要等待它们全部完成的，只需要等待 **W** 个成功就行了，这时候我们可以用 `co_await some(W, tasks[N]);` 。
+
+实际上 `any()` 和 `all()` 都是特殊形式的 `some()` ，前者相当于只要等待1个，后者则是需要等待全部。所以这两个的实现比较简单:
+
+```cpp
+template <class TREADY_CONTAINER, class TWAITING_CONTAINER>
+    LIBCOPP_COPP_API_HEAD_ONLY inline callable_future<promise_status> any(TREADY_CONTAINER&&ready_futures,
+                                                                          TWAITING_CONTAINER&&pending_futures)
+        requires SomeContainerConvertible<
+          typename some_ready_container<TREADY_CONTAINER>::value_type,
+          typename some_waiting_container_traits<TWAITING_CONTAINER>::value_type
+        >
+{
+  return some_delegate<typename some_ready_container<TREADY_CONTAINER>::value_type>::template run(
+      std::forward<TREADY_CONTAINER>(ready_futures), 1, &pending_futures);
+}
+
+template <class TREADY_CONTAINER, class TWAITING_CONTAINER>
+    LIBCOPP_COPP_API_HEAD_ONLY inline callable_future<promise_status> all(TREADY_CONTAINER&&ready_futures,
+                                                                          TWAITING_CONTAINER&&pending_futures)
+        requires SomeContainerConvertible<
+          typename some_ready_container<TREADY_CONTAINER>::value_type,
+          typename some_waiting_container_traits<TWAITING_CONTAINER>::value_type
+#  endif
+{
+  return some_delegate<typename some_ready_container<TREADY_CONTAINER>::value_type>::template run(
+      std::forward<TREADY_CONTAINER>(ready_futures), gsl::size(pending_futures), &pending_futures);
+}
+```
+
+而对于 `some()` , 最简单的方式就是在一个 `while` 循环中等待我们要关注的对象。主循环如下:
+
+```cpp
+promise_type some_promise{&context};
+while (context.status < promise_status::kDone) {
+  // Killed by caller
+  auto current_status = co_yield callable_future<promise_status>::yield_status();
+  if (current_status >= promise_status::kDone) {
+    context.status = current_status;
+    break;
+  }
+
+  co_await some_promise;
+}
+
+// destroy promise object and detach handles
+```
+
+这时候我们还需要侵入 `callable_future`, `generator_future` 和 `task_future` 的内部实现（访问一下私有成员）。因为对创建这些对象的地方并不知道这些 future 是否要被 `some()` 等待。对创建者而言，他们还是正常调用 `set_value()` 或者 `kill()` 之类。显然我们并不希望每次有唤醒都去检查一次哪些任务完成了，哪些仍然要等待，这不但会有惊群效应，还会有很多冗余的重置 `caller` 和重新设置 `caller` 的行为。那么我这里最终的做法就是加个计数器，当要等待的对象resume的次数到了我们要等待的对象数量了再扫描。
+
+```cpp
+void await_resume() {
+  // caller maybe null if the callable is already ready when co_await
+  auto caller = get_caller();
+  if (caller) {
+    if (nullptr != caller.promise) {
+      caller.promise->set_flag(promise_flag::kInternalWaitting, false);
+    }
+    set_caller(nullptr);
+  }
+
+  if (nullptr == context_) {
+    return;
+  }
+
+  ++context_->scan_bound;
+  if (context_->scan_bound >= context_->ready_bound) {
+    scan_ready(*context_);
+    context_->scan_bound = context_->ready.size();
+
+    if (context_->scan_bound >= context_->ready_bound && context_->status < promise_status::kDone) {
+      context_->status = promise_status::kDone;
+    }
+  }
+}
+```
+
+最后，我贴一个单元测试的代码来暂时一下使用示例吧:
+
+```cpp
+static copp::callable_future<int> callable_func_some_callable_in_initialize_list(size_t expect_ready_count,
+                                                                                 copp::promise_status expect_status) {
+  size_t resume_ready_count = 0;
+
+  copp::callable_future<int> callable1 = callable_func_some_any_all_callable_suspend(471);
+  copp::callable_future<int> callable2 = callable_func_some_any_all_callable_suspend(473);
+  copp::callable_future<int> callable3 = callable_func_some_any_all_callable_suspend(477);
+
+  copp::some_ready<copp::callable_future<int>>::type readys;
+  // 这里是单独变量转span，直接用容器(比如vector)包callable也是可以的
+  std::reference_wrapper<copp::callable_future<int>> pending[] = {callable1, callable2, callable3};
+  auto some_result = co_await copp::some(readys, 2, copp::gsl::make_span(pending));
+  CASE_EXPECT_EQ(static_cast<int>(expect_status), static_cast<int>(some_result));
+
+  int result = 1;
+  for (auto &ready_callable : readys) {
+    if (ready_callable->is_ready()) {
+      result += ready_callable->get_internal_promise().data();
+      ++resume_ready_count;
+    }
+  }
+
+  CASE_EXPECT_EQ(expect_ready_count, resume_ready_count);
+
+  co_return result;
+}
+```
+
 ## 杂项优化
 
 小对象优化
@@ -241,6 +349,8 @@ Module和 `enable_if`
 ## Benchmark
 
 压力测试仍然是分为trivial类型返回和非trivial类型返回两部分。非trivial类型因为有构造和析构函数，是会影响编译优化的效果的。
+
+目前看起来 ，在高并发场景下 task 的创建CPU开销和原来有栈协程带栈池的开销差别不大，切换开销大约是原来有栈协程的25%左右。低并发场景下差别不大。如果复用 `copp::generator_future` , 切换的CPU开销还能再降低40%左右。其实这个CPU开销对于业务逻辑来说占比非常低了，C++20更大的优势在于内存管理。
 
 按 https://en.cppreference.com/w/cpp/language/coroutines#Heap_allocation 的描述，某些场景下C++20协程是可以把promise的分配优化掉的。那么在高性能的接口层 （ `callable_future` ） 我们当然也想尽可能利用好编译器的特性。在 [单元测试][3] 里 `libcopp_sample_benchmark_std_couroutine_callable_recursive` 相关的项目中。可以看到 create 时间很长，但是 resume 时间为0，这估计就是触发这个优化+尾调用优化了，直接创建协程的时候就把后面的跑完了。
 
@@ -260,3 +370,4 @@ Module和 `enable_if`
 [1]: https://github.com/owent/libcopp
 [2]: https://owent.net/2020/2004.html
 [3]: https://github.com/owent/libcopp/actions
+[4]: http://www.dbms2.com/2010/05/01/ryw-read-your-writes-consistency/
