Fix spell error
Signed-off-by: owentou <owentou@tencent.com>

--- a/source/post/2022/2201.md
+++ b/source/post/2022/2201.md
@@ -51,7 +51,7 @@ _FPU_SETCW(cw);
 >
 > 还有个需要特别注意的是，有些协程组件没有保存浮点数控制字。如果系统中有使用协程，需要额外注意和确认这一点。
 
-最后，GCC还有一个编译选项 `-ffloat-store` 。默认情况下，gcc会尝试使用寄存器缓存浮点数计算的中间结果，因为x86架构下浮点数寄存器是80bits的，这也可能导致精度差异。这个选项则是强制中间结果也刷入内存，以便对齐到 IEEE 754 。但是同样令人沮丧的是Clang不支持改选项，加上这个选项Clang会报该选项会被忽略的Warning，并且实际测出来无论是否加改选项，性能也和GCC不开这个选项的结果一致。这也意味着macOS、iOS、Android上无法使用（最新的Android NDK已经移除GCC了）。
+最后，GCC还有一个编译选项 `-ffloat-store` 。默认情况下，gcc会尝试使用寄存器缓存浮点数计算的中间结果，因为x86架构下浮点数寄存器是80bits的，这也可能导致精度差异。这个选项则是强制中间结果也刷入内存，以便对齐到 IEEE 754 。但是同样令人沮丧的是Clang不支持该选项，加上这个选项Clang会报该选项会被忽略的Warning，并且实际测出来无论是否加改选项，性能也和GCC不开这个选项的结果一致。这也意味着macOS、iOS、Android上无法使用（最新的Android NDK已经移除GCC了）。
 
 在开启和处理了上述差异之后，我写的测试用例在各个平台下跑出的结果是一致的（x86,x86_64/armv7/arm64）。但是这也不排除我写的测试用例比较简单，有可能这在复杂的计算和涉及更复杂的编译优化的场景下才能触发。
 
