--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -126,6 +126,8 @@ callable_future<int> foo() {
   + 生命周期安全（调度层发起和恢复，内部调用）
     + `context` 析构前要把关联的 `handle` 直接 `resume` 掉（可能转为cancle状态）
     + 调用者被上层强制  `resume` 时，不能影响 `generator_future` 的生命周期。调用关系要自动解绑。
+    + wake重入保护+单元测试  
+    + generator_context未被续期要被kill才能释放  
   + 数据完成接口: `context:set_value`
   + 事件转换（事件回调）
     + 挂起等待回调: `await_suspend_callback(shared_ptr<generator_context>)` -> 允许续期 context
@@ -137,6 +139,7 @@ callable_future<int> foo() {
       + `promise_type` 对 `context` 弱引用,最后一个 `task_future` 析构时要强制kill掉
       + `context` 对 `promise_type` 弱引用(通过 `handle_delegate` )
     + `context` 析构(最后一个 `task_future` 释放)前要把关联的 `handle` 一直 `resume` 到 `done` 为止
+    + `return_void()/return_value()` 时不能 `resume_callers()` , 应该在 `final_suspend()` 中执行。否则会导致栈上部分对象倍重复析构。(GCC)  
   + `then` 接口，用于简化流程操作
   + 上层主动 `kill`
   + 任务管理: `task_manager`
@@ -364,7 +367,7 @@ promise_type的类型转换
 
 `future` 对象析构和 `final_suspend` 的执行顺序未定义
 
-`return_value()/return_void()` 不能 `handle.destroy()` 。
+`return_value()/return_void()` 不能 `handle.destroy()` 。否则GCC的实现中会重复析构协程栈变量。
 
 ## 从有栈协程迁移
 
