--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -126,8 +126,8 @@ callable_future<int> foo() {
   + 生命周期安全（调度层发起和恢复，内部调用）
     + `context` 析构前要把关联的 `handle` 直接 `resume` 掉（可能转为cancle状态）
     + 调用者被上层强制  `resume` 时，不能影响 `generator_future` 的生命周期。调用关系要自动解绑。
-    + wake重入保护+单元测试  
-    + generator_context未被续期要被kill才能释放  
+    + Wake重入保护+单元测试(主要是在各类主动和被动的kill,析构极其嵌套调用时的内存访问安全)
+    + generator_context未被续期要自动被killed且释放(以防使用者有BUG导致资源泄露)
   + 数据完成接口: `context:set_value`
   + 事件转换（事件回调）
     + 挂起等待回调: `await_suspend_callback(shared_ptr<generator_context>)` -> 允许续期 context
@@ -140,6 +140,7 @@ callable_future<int> foo() {
       + `context` 对 `promise_type` 弱引用(通过 `handle_delegate` )
     + `context` 析构(最后一个 `task_future` 释放)前要把关联的 `handle` 一直 `resume` 到 `done` 为止
     + `return_void()/return_value()` 时不能 `resume_callers()` , 应该在 `final_suspend()` 中执行。否则会导致栈上部分对象倍重复析构。(GCC)  
+    + `unbind_from_manager()` 时是最后一个task也应该是内存安全的
   + `then` 接口，用于简化流程操作
   + 上层主动 `kill`
   + 任务管理: `task_manager`
@@ -375,9 +376,7 @@ promise_type的类型转换
 
 ## 未来优化方向
 
-取消 `final_suspend()` 改为在 `return_value()/return_void()` 时唤醒 `callers` 。预计能减少代码复杂度，对编译器执行优化更友好。涉及更加细化的生命周期管理。
-
-实现一个不带atomic非线程安全的 `shared_ptr` ，很多线程内部流程需要引用计数，但是其实不需要atomic操作。这会导致额外的CPU Cache失效。(特别是 `task_future` 里 `awaitable` 等对 `context` 的引用 )
+实现一个不带atomic非线程安全的 `shared_ptr` ，很多线程内部流程需要引用计数，但是其实不需要atomic操作。这会导致额外的CPU Cache失效。(特别是 `task_future` 和 `generator_future` 里 awaitable和promise对象之间交互时对 `context` 的传递，一定是在单线程内的。 )
 
 ## 最后
 
