--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -23,6 +23,39 @@ type: post
 
 我们整个服务器框架的和协程相关的改造分为两部分，第一部分是 [libcopp][1] 这个库的底层支持，另一个就是现有业务流程的改造过程。我先完成了 [libcopp][1] 对C++20协程适配支持，这也是本篇分享的主要内容。
 
+## C++20 Coroutine 伪代码
+
+为了方便查阅和理解，还是先贴一下 C++20 Coroutine 基本原理的伪代码。
+
+```cpp
+template<class... TARGS>
+COROUTINE_OBJECT func(TARGS&&... args) {
+  try {
+    P p(std::forward<TARGS>(args)...);
+    // 这个P是自己定义的 using P = COROUTINE_OBJECT::promise_type;
+    // 文档上说promise_constructor_arguments 是空或者函数的参数的左值传入 args... ，但是目前版本的MSVC还仅支持空参数列表
+
+    // ISO规范规定 get_return_object 在 initial_suspend 前，但是某些版本的Clang实现中 get_return_object 在 initial_suspend 后
+    COROUTINE_OBJECT r = p.get_return_object();
+    co_await p.initial_suspend();
+
+    try {
+      // 原函数体 ...
+      p.return_void() or p.return_value(RET) // 取决于函数体里有没有 co_return RET
+    } catch(...) {
+      p.unhandled_exception();    // 未捕获的异常接口
+    }
+
+  final_suspend:
+    co_await p.final_suspend();     // final suspend point
+
+    return r;
+  } catch(...) {
+    return COROUTINE_OBJECT::promise_type::get_return_object_on_allocation_failure(); // noexcept
+  }
+}
+```
+
 ## 使用场景分析
 
 我们来看一下协程的使用场景。首先从使用者的角色上，主要是有3类。
@@ -362,7 +395,7 @@ static copp::callable_future<int> callable_func_some_callable_in_initialize_list
 
 首先，在 [《libcopp接入C++20 Coroutine和一些过渡期的设计》][2] 里提到的 GCC [在MinGW环境下的链接符号问题][5] 在当前的 GCC 12 中已经修复了， GCC 11 我没有测试。
 
-第二个坑，是临时对象的析构顺序， `future` 对象析构和 `final_suspend` 的执行顺序未定义。在GCC（至少是某些版本的GCC）中，如果我们执行 `co_await a{...};` ，然后 `a::operator await` 返回 `b` 类型。都是临时变量，那么 `a` 可能在 `b` 创建后，调用 `b::await_suspend` 之前析构（不同编译器行为不完全一样）。这里如果有资源引用可能主要注意一下生命周期。
+第二个坑，是临时对象的析构顺序，如果 `co_await` 一个 `future` 对象，返回 `awaitable` 用于协程切出和恢复，在GCC 10的某些版本中，这个 `future` 对象析构会在 `await_suspend` 的之前完成（ 10.3 以后的版本）。这里如果有资源引用可能主要注意一下生命周期。具体可以看一下 https://godbolt.org/z/dbrxns66b 这里的sample。
 
 第三个易踩坑点是关于协程内 `promise_type` 类型的。由于带类型的 `coroutine_handle<Promise>` 有个接口 `coroutine_handle<Promise>::promise()` 可以获取内部的 promise 类型。并且有个接口 `std::coroutine_handle<Promise>::from_promise` 可以从某个 promise 构造handle。我们可能很自然地会想到可以用一个 promise 基类来实现一下公共的功能，然后模块直接传递基类的 `coroutine_handle<Promise>` 。但是这是行不通的，我们来看看 `from_promise` 的实现:
 
