--- a/source/post/2022/2207.md
+++ b/source/post/2022/2207.md
@@ -7,15 +7,28 @@ date: 2022-08-12 20:50:45
 draft: true
 id: 2207
 tags: 
-  - libcopp
-  - coroutine
-  - 协程
-  - C++20
-title: libcopp对C++20协程的接入和接口设计
+  - upb
+  - protobuf
+  - lua
+  - grpc
+  - pbc
+  - xresloader
+  - cmake-toolset
+title: 集成 upb 和 lua binding 的踩坑小计
 type: post
 ---
 
 ## 前言
+
+## cmake生成工具的问题
+
+## grpc 支持
+
+## cmake CONFIG
+
+## lua binding和测试小工具
+
+## xresloader 读表工具集成
 
 ## 记录一个Python的crash
 
