--- a/source/post/2022/2207.md
+++ b/source/post/2022/2207.md
@@ -15,7 +15,7 @@ tags:
   - xresloader
   - cmake-toolset
   - cmake
-title: 集成 upb 和 lua binding 的踩坑小计
+title: 集成 upb 和 lua binding 的踩坑小记
 type: post
 ---
 
