--- a/source/post/2022/2207.md
+++ b/source/post/2022/2207.md
@@ -21,7 +21,7 @@ type: post
 
 ## 前言
 
-最近新项目重新评估了一下protobuf的C/C++ -> Lua binding 方案。之前，使用最广泛的 Lua binding 方案应该是 [云风][5] 大大的 [pbc][4] 。但是这个库已经是作者弃坑好多年的状态了。我之前使用 [pbc][4] 的时候刚碰上 protobuf 3.0 刚出来，当时打了patch来适配 protobuf 3.0 ，还修复了一些其他问题。这个Patch有些推给了上游，有些因为和上游的某些机制冲突没有推。我了解到的很多其他项目也或多或少的打了自己的Patch，大多数也没往上游推。基本上 [pbc][4] 已经处于一个失维的状态，所以这次新项目就干脆来寻求更好，或者说仍然有良好活跃度的解决方案。于是就看向了 [upb][1] 。
+最近新项目重新评估了一下protobuf的C/C++ -> Lua binding 方案。之前，使用最广泛的 Lua binding 方案应该是 [云风][5] 的 [pbc][4] 。但是这个库已经是作者弃坑好多年的状态了。我之前使用 [pbc][4] 的时候刚碰上 protobuf 3.0 刚出来，当时打了patch来适配 protobuf 3.0 ，还修复了一些其他问题。这个Patch有些推给了上游，有些因为和上游的某些机制冲突没有推。我了解到的很多其他项目也或多或少的打了自己的Patch，大多数也没往上游推。基本上 [pbc][4] 已经处于一个失维的状态，所以这次新项目就干脆来寻求更好，或者说仍然有良好活跃度的解决方案。于是就看向了 [upb][1] 。
 
 [upb][1] 是一个 protobuf 官方的子项目，运行时使用纯C编写。代码生成工具使用C++，依赖 libprotoc 和 abseil-cpp 。并且 [upb][1] 是现在protobuf的Ruby, PHP和Python的官方运行时库，里面也包含了Lua binding模块。这样不仅技术支持有保障（有主流项目踩坑），并且能跟进protobuf的新功能。
 在Lua binding方面，我们还有一些特殊的地方。因为编译的时候需要包含lua的头文件和设置链接库，而我们需要支持各种不同的lua运行时。（比如我们客户端用Unlua并集成到Unreal Engine，服务器用官方的lua 5.4，我们这边还有项目组定制化了Lua抹除了浮点数）。所以对于Lua binding，我们不能用预编译包的方式发布，只能用源码发布。所幸涉及的文件不多，还比较好处理。
@@ -65,7 +65,7 @@ static void PrintString(int max_cols, absl::string_view* str,
 }
 ```
 
-这里 `isprint(ch)` 的 `ch` 是一个 `char` 。而按照 https://en.cppreference.com/w/c/string/byte/isprint 的说法。这个函数接受的参数虽然是个 `int` 但它必须是个 `unsigned char` 或者 `EOF` 。否则是UB。实际上，这里对于utf-8字符串或者unicode，这里取到的 `ch` 可能为负数，于是隐式转换成 `int` 后不是一个 `unsigned char` 。在MSVC下此处会崩溃。最简单呃方法是把 `isprint(ch)` 改成 `isprint(static_cast<int>(static_cast<unsigned char>(ch)))` 。
+这里 `isprint(ch)` 的 `ch` 是一个 `char` 。而按照 https://en.cppreference.com/w/c/string/byte/isprint 的说法。这个函数接受的参数虽然是个 `int` 但它必须是个 `unsigned char` 或者 `EOF` 。否则是UB。实际上，这里对于utf-8字符串或者unicode，这里取到的 `ch` 可能为负数，于是隐式转换成 `int` 后不是一个 `unsigned char` 。在MSVC下此处会崩溃。最简单的方法是把 `isprint(ch)` 改成 `isprint(static_cast<int>(static_cast<unsigned char>(ch)))` 。
 
 ## cmake生成工具的问题
 
