--- a/source/post/2022/2209.md
+++ b/source/post/2022/2209.md
@@ -15,6 +15,7 @@ tags:
   - shared
   - dll
   - so
+  - CNCF
 
 title: 关于opentelemetry-cpp社区对于C++ Head Only组件单例和符号可见性的讨论小记
 type: post
@@ -416,7 +417,7 @@ print_addr address: 1
 
 [1]: https://github.com/open-telemetry/opentelemetry-cpp
 [2]: https://opentelemetry.io/
-[3]: https://www.cncf.io/
+[3]: https://cncf.io/
 [4]: https://github.com/open-telemetry/opentelemetry-cpp/blob/main/docs/requirements.md#requirements
 [5]: https://learn.microsoft.com/en-us/cpp/cpp/selectany
 [6]: https://gcc.gnu.org/onlinedocs/gcc/Microsoft-Windows-Variable-Attributes.html
