优化代码高亮
Signed-off-by: owent <admin@owent.net>

--- a/source/post/2022/2210.md
+++ b/source/post/2022/2210.md
@@ -104,7 +104,8 @@ B
 
 而执行的时候，几乎所有的插件都是使用 `plugin.NextOrFailure(m.Name(), m.Next, ctx, w, r)` 来先触发下一跳，通过协程的等待机制等下一跳完成在执行自己的逻辑。
 如果需要修改下一跳的返回结果，可以通过 [coredns][1] 提供的 [nonwriter](github.com/coredns/coredns/plugin/pkg/nonwriter) 模块对插件链的解析结果进行劫持再重新写入。
-这些操作最终使得整体像是一个链表。
+
+这些操作最终使得整体像是一个链表按配置的顺序执行，实际上它是一个栈。
 
 当然也可以不用这种标准方式执行，比如说我们也可以像 [smartdns][12] 一样并发发起多个请求，返回最快的那个。（说不定哪天有时间了我可以再写个插件完成这个功能）
 
