--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -395,7 +395,7 @@ static copp::callable_future<int> callable_func_some_callable_in_initialize_list
 
 首先，在 [《libcopp接入C++20 Coroutine和一些过渡期的设计》][2] 里提到的 GCC [在MinGW环境下的链接符号问题][5] 在当前的 GCC 12 中已经修复了， GCC 11 我没有测试。
 
-第二个坑，是临时对象的析构顺序，如果 `co_await` 一个 `future` 对象，返回 `awaitable` 用于协程切出和恢复，在GCC 10的某些版本中，这个 `future` 对象析构会在 `await_suspend` 的之前完成（ 10.3 以后的版本）。这里如果有资源引用可能主要注意一下生命周期。具体可以看一下 https://godbolt.org/z/dbrxns66b 这里的sample。
+第二个坑，是临时对象的析构顺序，如果 `co_await` 一个 `future` 对象，返回 `awaitable` 用于协程切出和恢复，在GCC 10的某些版本中，这个 `future` 对象析构会在 `await_suspend` 的之前完成（ 10.3 以前的版本）。这里如果有资源引用可能主要注意一下生命周期。具体可以看一下 https://godbolt.org/z/dbrxns66b 这里的sample。
 
 第三个易踩坑点是关于协程内 `promise_type` 类型的。由于带类型的 `coroutine_handle<Promise>` 有个接口 `coroutine_handle<Promise>::promise()` 可以获取内部的 promise 类型。并且有个接口 `std::coroutine_handle<Promise>::from_promise` 可以从某个 promise 构造handle。我们可能很自然地会想到可以用一个 promise 基类来实现一下公共的功能，然后模块直接传递基类的 `coroutine_handle<Promise>` 。但是这是行不通的，我们来看看 `from_promise` 的实现:
 
@@ -435,6 +435,163 @@ static coroutine_handle from_promise(_Promise& __p) {
 我们之前的有栈协程提供了一个带超时管理的 `task_manager` ，为了方便迁移。对于 `task_future` 我也提供了一个特化实现的 `task_manager` 提供相同的功能。当然，超时错误的错误返回不能像之前一样使用特定错误码。而是要走错误状态转换的 `copp::promise_error_transform<TRETURN>` ，并接受 `kCancle/kKilled/kTimeout` 作为参数。
 
 其他的迁移出钱前文提到的 `some()`, `any()` 和 `all()` 之外，都和项目中具体的使用方式与新老协程在接口形式上的约束有关了。我后面全部完成完整版本后会再专门开一篇分享在实际项目中各种应用场景下的的迁移过程。
+
+## 压力测试
+
+补充一个简单的压力测试: (带jemalloc 5.3.0)
+
+{{< chart >}}
+{
+  "type": "bar",
+  "data": {
+    labels: ['协程数:1,栈大小16KB', '协程数:1000,栈大小2MB', '协程数:30000,栈大小64KB'],
+    "datasets": [{
+      "label": "libcopp+动态栈池 切换耗时",
+      "borderColor": "rgba(184, 134, 11, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [32, 77, 213],
+      "type": 'line'
+    }, {
+      "label": "libcopp+libcotask+动态栈池 切换耗时",
+      "borderColor": "rgba(189, 183, 107, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [49, 134, 371],
+      "type": 'line'
+    }, {
+      "label": "libcopp generator - GCC 切换耗时",
+      "borderColor": "rgba(139, 0, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [29, 29, 31],
+      "type": 'line'
+    }, {
+      "label": "libcopp generator(no trivial) - GCC 切换耗时",
+      "borderColor": "rgba(85, 107, 47, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [38, 38, 39],
+      "type": 'line'
+    }, {
+      "label": "libcopp callable - GCC 切换耗时",
+      "borderColor": "rgba(153, 50, 204, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [null, null, 46],
+      "type": 'line'
+    }, {
+      "label": "libcopp generator - Clang 切换耗时",
+      "borderColor": "rgba(233, 150, 122, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [39, 39, 40],
+      "type": 'line'
+    }, {
+      "label": "libcopp generator(no trivial) - Clang 切换耗时",
+      "borderColor": "rgba(143, 188, 143, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [43, 43, 46],
+      "type": 'line'
+    }, {
+      "label": "libcopp callable - Clang 切换耗时",
+      "borderColor": "rgba(72, 61, 139, 1)",
+      "fill": false,
+      "yAxisID": 'y-axis-2',
+      "data": [null, null, 30],
+      "type": 'line'
+    }, {
+      "label": "libcopp+动态栈池 创建耗时",
+      "backgroundColor": "rgba(218, 165, 32, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 96, 212]
+    }, {
+      "label": "libcopp+libcotask+动态栈池 创建耗时",
+      "backgroundColor": "rgba(240, 230, 140, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 134, 256]
+    }, {
+      "label": "libcopp generator - GCC 创建耗时",
+      "backgroundColor": "rgba(255, 0, 255, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 65, 67]
+    }, {
+      "label": "libcopp generator(no trivial) - GCC 创建耗时",
+      "backgroundColor": "rgba(128, 128, 0, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 73, 120]
+    }, {
+      "label": "libcopp callable - GCC 创建耗时",
+      "backgroundColor": "rgba(218, 112, 214, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, null, 111]
+    }, {
+      "label": " libcopp generator - Clang 创建耗时",
+      "backgroundColor": "rgba(250, 128, 114, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 83, 86]
+    }, {
+      "label": "libcopp generator(no trivial) - Clang 创建耗时",
+      "backgroundColor": "rgba(46, 139, 87, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, 83, 100]
+    }, {
+      "label": "libcopp callable - Clang 创建耗时",
+      "backgroundColor": "rgba(112, 128, 144, 1)",
+      "yAxisID": 'y-axis-1',
+      "data": [null, null, 99]
+    }]
+  },
+  "options": {
+      title: {
+        display: true,
+        text: '切换/创建耗时（越小越好）'
+    },
+      scales: {
+        yAxes: [{
+            type: 'linear',
+            display: true,
+            scaleLabel: {
+                display: true,
+                labelString: "切换耗时（单位：纳秒）"
+            },
+            position: 'left',
+            id: 'y-axis-2',
+            gridLines: {
+                drawOnChartArea: false
+            },
+            ticks: {
+                callback: function(value, index, values) {
+                    return value + ' ns';
+                }
+            }
+        }, {
+            type: 'logarithmic',
+            display: true,
+            scaleLabel: {
+                display: true,
+                labelString: "创建耗时（单位：纳秒）"
+            },
+            ticks: {
+                autoSkip: true,
+                callback: function(value, index, values) {
+                    for (var idx in values) {
+                        var tv = values[idx];
+                        if (tv < value && Math.floor(Math.log(value)) == Math.floor(Math.log(tv))) {
+                            return null;
+                        }
+                    }
+                    return value + ' ns';
+                }
+            },
+            position: 'right',
+            id: 'y-axis-1',
+        }],
+    }
+  }
+}
+{{< /chart >}}
 
 ## 未来优化方向
 
