--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -440,6 +440,11 @@ static coroutine_handle from_promise(_Promise& __p) {
 
 补充一个简单的压力测试: (带jemalloc 5.3.0)
 
+CPU: AMD EPYC 7K62 48-Core Processor(2.6GHz)
+Memory: 32GB
+GCC Version: 12.2.0
+Clang Version: 15.0.1
+
 {{< chart >}}
 {
   "type": "bar",
@@ -447,14 +452,14 @@ static coroutine_handle from_promise(_Promise& __p) {
     labels: ['协程数:1,栈大小16KB', '协程数:1000,栈大小2MB', '协程数:30000,栈大小64KB'],
     "datasets": [{
       "label": "libcopp+动态栈池 切换耗时",
-      "borderColor": "rgba(184, 134, 11, 1)",
+      "borderColor": "rgba(139, 0, 0, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [32, 77, 213],
       "type": 'line'
     }, {
       "label": "libcopp+libcotask+动态栈池 切换耗时",
-      "borderColor": "rgba(189, 183, 107, 1)",
+      "borderColor": "rgba(0, 0, 139, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [49, 134, 371],
@@ -468,7 +473,7 @@ static coroutine_handle from_promise(_Promise& __p) {
       "type": 'line'
     }, {
       "label": "libcopp generator(no trivial) - GCC 切换耗时",
-      "borderColor": "rgba(85, 107, 47, 1)",
+      "borderColor": "rgba(0, 139, 139, 1)",
       "fill": false,
       "yAxisID": 'y-axis-2',
       "data": [38, 38, 39],
@@ -503,17 +508,17 @@ static coroutine_handle from_promise(_Promise& __p) {
       "type": 'line'
     }, {
       "label": "libcopp+动态栈池 创建耗时",
-      "backgroundColor": "rgba(218, 165, 32, 1)",
+      "backgroundColor": "rgba(128, 0, 0, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 96, 212]
     }, {
       "label": "libcopp+libcotask+动态栈池 创建耗时",
-      "backgroundColor": "rgba(240, 230, 140, 1)",
+      "backgroundColor": "rgba(255, 0, 0, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 134, 256]
     }, {
       "label": "libcopp generator - GCC 创建耗时",
-      "backgroundColor": "rgba(255, 0, 255, 1)",
+      "backgroundColor": "rgba(0, 0, 255, 1)",
       "yAxisID": 'y-axis-1',
       "data": [null, 65, 67]
     }, {
