--- a/source/post/2022/2206.md
+++ b/source/post/2022/2206.md
@@ -440,10 +440,10 @@ static coroutine_handle from_promise(_Promise& __p) {
 
 补充一个简单的压力测试: (带jemalloc 5.3.0)
 
-CPU: AMD EPYC 7K62 48-Core Processor(2.6GHz)
-Memory: 32GB
-GCC Version: 12.2.0
-Clang Version: 15.0.1
++ CPU: AMD EPYC 7K62 48-Core Processor(2.6GHz)
++ Memory: 32GB
++ GCC Version: 12.2.0
++ Clang Version: 15.0.1
 
 {{< chart >}}
 {
