尝试优化公式渲染配置
Signed-off-by: owent <admin@owent.net>

--- a/source/post/2011/482.md
+++ b/source/post/2011/482.md
@@ -59,7 +59,7 @@ man [章节号] 手册名称:
 7. Miscellaneous （杂项）
 8. Administrative Commands （管理员命令）
 
-export $ENV_VAR:/usr/bin (环境变量)
+`export $ENV_VAR:/usr/bin` (环境变量)
 
 PATH (可执行文件目录)
 LD_LIBRARY_PATH (C/C++库文件目录)
