--- a/source/post/2011/534.md
+++ b/source/post/2011/534.md
@@ -57,17 +57,17 @@ std::sub_match里有matched成员表示该项是否匹配成功，还有first和
 
           占位符 |           含义 |
 ----------------|---------------|
-\$& | 整个匹配值 |
-\$MATCH | 和 \$& 一样 |
-\${^MATCH} | 和 \$& 一样 |
-\$` | 被匹配字符串去除匹配目标后的结果（即） |
-\$PREMATCH | 和 \$` 一样 |
-\${^PREMATCH} | 和 \$` 一样 |
-\$' | 当前匹配位置之后的全部文本（不包括匹配的字符串） |
-\$POSTMATCH | 和 \$' 一样 |
-\${^POSTMATCH} | 和 \$' 一样 |
-\$\$ | 字符 '$' |
-$n | 第n和被匹配项的值 |
+`$&` | 整个匹配值 |
+`$MATCH` | 和 `$&` 一样 |
+`${^MATCH}` | 和 `$&` 一样 |
+``` $` ``` | 被匹配字符串去除匹配目标后的结果（即） |
+`$PREMATCH` | 和 ``` $` ``` 一样 |
+`${^PREMATCH}` | 和 ``` $` ``` 一样 |
+`$'` | 当前匹配位置之后的全部文本（不包括匹配的字符串） |
+`$POSTMATCH` | 和 `$'` 一样 |
+`${^POSTMATCH}` | 和 `$'` 一样 |
+`$$` | 字符 `'$'` |
+`$n` | 第n和被匹配项的值 |
 
 我表示boost的功能更强大不过这些已经够了。
 另外转义字符如下
