--- a/source/post/2013/730.md
+++ b/source/post/2013/730.md
@@ -68,7 +68,7 @@ CentOS 6.2 & CentOS 6.5 & Suse 的不知道哪个很老的版本
 + gdb 7.7.1
 
 <h4><span style="color:#4B0082;">注：</span></h4>
-+ (所有的库都会被安装在**$PREFEX_DIR**里)
++ (所有的库都会被安装在 `$PREFEX_DIR` 里)
 
 <h4><span style="color:#4B0082;">额外建议：</span></h4>
 给特定用户安装 gdb的pretty-printer 用以友好打印stdc++的stl容器
