--- a/source/post/2014/1101.md
+++ b/source/post/2014/1101.md
@@ -48,7 +48,7 @@ CentOS 6.2 & CentOS 7.0
 + lldb 3.5.1
 
 #### 注：
-+ (所有的库都会被安装在**$PREFEX_DIR**里)
++ (所有的库都会被安装在 `$PREFEX_DIR` 里)
 
 #### 额外建议：
 + 如果增加编译组件，比如已装有gtest要编译lld，使用命令***./install.sh -t +lld*** 
