--- a/source/post/2015/1149.md
+++ b/source/post/2015/1149.md
@@ -64,7 +64,7 @@ CentOS 7
 + clang_tools_extra
 
 #### 注：
-+ (所有的库都会被安装在**$PREFEX_DIR**里)
++ (所有的库都会被安装在 `$PREFEX_DIR` 里)
 
 #### 额外建议：
 + 如果增加编译组件，比如已装有gtest要编译lld，使用命令***./install.sh -t +lld*** 
