--- a/source/post/2023/2301.md
+++ b/source/post/2023/2301.md
@@ -16,7 +16,7 @@ tags:
   - nghttp2
   - nghttp3
   - ngtcp2
-title: 给cmake-toolset和工具链加HTTP/2和HTTP/3支持
+title: 给cmake-toolset和工具链(curl等)加HTTP/2和HTTP/3支持
 type: post
 ---
 
