--- a/source/post/2023/2302.md
+++ b/source/post/2023/2302.md
@@ -11,7 +11,7 @@ tags:
   - otel
   - cpp
   - logs
-title: Opentelemetry-cpp的Logs模块标准更新
+title: Opentelemetry-cpp的Logs模块标准更新(涉及近期版本:1.8-1.9的BREAK CHANGES)
 type: post
 ---
 
@@ -22,7 +22,7 @@ type: post
 同时 [opentelemetry][1] 有一个标准规范文档 [opentelemetry-specification][3] ，而SDK实现主要就是来对这个标准规范文档的特定语言实现。
 由于日志(Logs)这一块一直处于Experimental阶段，所以很长时间以来 [C++ SDK接入层][2] 都没有及时更新跟进规范的变化。
 
-去年底的时候，我也是抽时间来更新了一波规范实现。但是拖到今天才来写这篇分享( \* T _ T \* )，也是想着把一些向前不兼容的变化列举出来，方便可能有些同学升级的时候可能会碰到一些问题可以对照解决。
+去年底的时候，我抽时间来更新了一波规范实现。但是拖到今天才来写这篇分享( \* T _ T \* )，也是想着把一些向前不兼容的变化列举出来，方便可能有些同学升级的时候可能会碰到一些问题可以对照解决。
 
 首先简单介绍一下 [opentelemetry-cpp][2] 的内部模块结构，主要是三部分: API, SDK, Exporter 。然后还有其他一些扩展和辅助性功能。
 
