--- a/source/post/2023/2303.md
+++ b/source/post/2023/2303.md
@@ -30,7 +30,7 @@ type: post
 
 ![2303-01.png](2303-01.png)
 
-可以看到，本质上是创建了一个对象用来放协程栈上的变量，通过一个挂起点的状态机和 `goto` 去做resume的条状。
+可以看到，本质上是创建了一个对象用来放协程栈上的变量，通过一个挂起点的状态机和 `goto` 去做resume状态。
 
 而要接入C++20协程需要满足一下需求:
 
@@ -55,7 +55,13 @@ type: post
 
 那么我这里针对这三种使用场景设计了3个不同的结构。
 
+Task用于框架调度层，需要能够异步执行，能够脱离调用者的生命周期，并且需要能够提前终止，大致结构如下：
+
 ![2303-02.png](2303-02.png)
+
+而Callable用于业务层，需要能够足够轻量，能够传递调用者和Task状态，大致结构如下：
+
+![2303-05.png](2303-05.png)
 
 我们可以对比一下之前有栈协程的使用情况。
 
