--- a/source/post/2023/2304.md
+++ b/source/post/2023/2304.md
@@ -274,6 +274,15 @@ index 7ed0f3c..6f8d6fb 100644
 
 如果使用 `vimdiff` 或者其他编辑器的diff还能更好看一些。
 
+### 读表代码生成工具-[xres-code-generator][6]增加 upb-lua binding支持
+
+Protobuf有个子项目 [upb][11] ，这是一个纯C实现的非常小型的protobuf打解包运行时。现在包括Ruby、PHP和Python的binding也是它。
+它内置有lua binding，我们项目组也是在尝试使用。
+
+> 集成的过程中也是踩了点小坑，详情可参见: [《集成 upb 和 lua binding 的踩坑小记》][12]
+
+那么这里，我也是给upb的lua binding增加了读表的模板支持。得益于模板引擎的便利，实现起来非常简单，详见: <https://github.com/xresloader/xres-code-generator/blob/main/template/DataTableCustomIndexUpb.lua.mako> 和 <https://github.com/xresloader/xres-code-generator/blob/main/template/common/upblua/DataTableServiceUpb.lua> 。并且也支持多版本管理和多重索引。
+
 ## 最后
 
 感谢大家的关注和贡献，欢迎持续交流拍砖。
@@ -288,3 +297,5 @@ index 7ed0f3c..6f8d6fb 100644
 [8]: https://xresloader.atframe.work/users/advance_usage.html#plain-xresloader-2-7-0
 [9]: https://github.com/xresloader/xresloader-protocol
 [10]: https://github.com/xresloader/xresloader-docs
+[11]: https://github.com/protocolbuffers/upb
+[12]: https://owent.net/2022/2207.html
