--- a/source/post/2023/2305.md
+++ b/source/post/2023/2305.md
@@ -140,7 +140,7 @@ PROTOBUF_ATTRIBUTE_NO_DESTROY PROTOBUF_CONSTINIT PROTOBUF_ATTRIBUTE_INIT_PRIORIT
 可以看到，`.pb.cc` 里面并没有设置 `TGF_BATTLE_PROTOCOL_API` 来导出符号，最终就会导致类似下面这样的链接错误:
 
 ```bash
-7>TGFBattleUtility.lib(BattleAffixAlgorithm.obj): Error LNK2001 : 无法解析的外部符号 "struct tgf::DBattleAffixDefaultTypeInternal tgf::_DBattleAffix_default_instance_" (?_DBattleAffix_default_instance_@tgf@@3UDBattleAffixDefaultTypeInternal@1@A)
+7>TGFBattleUtility.lib(BattleAffixAlgorithm.obj): Error LNK2001: unresolved external symbol "struct tgf::DBattleAffixDefaultTypeInternal tgf::_DBattleAffix_default_instance_" (?_DBattleAffix_default_instance_@tgf@@3UDBattleAffixDefaultTypeInternal@1@A)
 ```
 
 那么解决方法也很简单，就是在 `protoc` 的代码里补上这些，（v21和v23版本变化比较大，具体可以参考下面的patch files）
