--- a/source/post/2023/2307.md
+++ b/source/post/2023/2307.md
@@ -13,7 +13,7 @@ tags:
   - 转表
   - UE
   - Unreal Engine
-title: Excel转表工具(xresloader)增加验证外部数据机制和唯一性验证器
+title: Excel转表工具(xresloader)的新验证器（验证外部Excel和文本数据，唯一性和自定义规则）
 type: post
 ---
 
