--- a/source/post/2023/2309.md
+++ b/source/post/2023/2309.md
@@ -7,17 +7,286 @@ date: 2023-11-27 11:39:45
 draft: true
 id: 2309
 tags: 
-  - opentelemetry
-  - otel
-  - grpc
-  - dynamic
-  - static
-  - musl
-title: Opentelemetry社区在gRPC的几个链接问题(静态库和动态库混用,musl工具链,符号裁剪)
+  - xresloader
+  - excel
+  - xres-code-generator
+  - lua
+  - lua-protobuf
+  - UE
+  - Unreal
+  - Unreal Engine
+  - 蓝图
+  - Blueprint
+title: 给xresloader（Excel导表工具）增强UE读表支持（包含蓝图,Blueprint）
 type: post
 ---
 
-+ https://github.com/open-telemetry/opentelemetry-cpp/issues/1998
-+ https://github.com/open-telemetry/opentelemetry-cpp/issues/1940
-+ https://github.com/open-telemetry/opentelemetry-cpp/pull/1891
-+ https://github.com/open-telemetry/opentelemetry-cpp/issues/1603
+
+## 前言
+
+[xresloader][1] 是一组用于把Excel数据结构化并导出为程序可读的数据文件的导表工具集。它包含了一系列跨平台的工具、协议描述和数据读取代码。
+
+主要功能特点：
+
++ 跨平台（java 11 or upper）
++ Excel => protobuf/msgpack/lua/javascript/json/xml
++ 完整支持协议结构，包括嵌套结构和数组嵌套
++ 同时支持protobuf proto v2 和 proto v3
++ 支持导出proto枚举值到lua/javascript代码和json/xml数据
++ 支持导出proto描述信息值到lua/javascript代码和json/xml数据（支持自定义插件，方便用户根据proto描述自定义反射功能）
++ 支持导出 UnrealEngine 支持的json或csv格式，支持自动生成和导出 UnrealEngine 的 ``DataTable`` 加载代码
++ 支持别名表，用于给数据内容使用一个易读的名字
++ 支持验证器，可以在数据里直接填写proto字段名或枚举名，或者验证填入数据的是否有效
++ 支持通过protobuf协议插件控制部分输出
++ 支持自动合表，把多个Excel数据表合并成一个输出文件
++ 支持公式
++ 支持oneof,支持plain模式输入字符串转为数组或复杂结构,支持map
++ 支持空数据压缩（裁剪）或保留定长数组
++ 支持基于正则表达式分词的字段名映射转换规则
++ 支持设置数据版本号
++ Lua输出支持全局导出或导出为 ``require`` 模块或导出为 ``module`` 模块。
++ Javascript输出支持全局导出或导出为 ``nodejs`` 模块或导出为 ``AMD`` 模块。
++ 提供CLI批量转换工具（支持python 2.7/python 3 @ Windows、macOS、Linux）
++ 提供GUI批量转换工具（支持Windows、macOS、Linux）
++ CLI/GUI批量转换工具支持include来实现配置复用
+
+[xresloader][1] 包含了多个组件，其中最主要的部分分别是。
+
++ [xresloader][2] : 转表模块引擎
++ [xresconv-cli][3] : 用于批量转表集成的命令行工具
++ [xresconv-gui][4] : 用于批量转表集成的GUI工具
++ [xresconv-conf][5] : 用于批量转表集成的规范文件
++ [xres-code-generator][6] : 读表代码生成工具
++ [xresloader-dump-bin][7] : 针对转出protobuf二进制打印为可读文本的工具
++ [xresloader-protocol][8] : 所使用的到的协议集合
++ [xresloader-docs][9] : 文档
+
+[xresloader][2] 很早前内置了导出 [Unreal Engine（UE）][10] 中DataTable所支持的Json和Csv格式，并输出支持这些DataTable的导入设置和代码文件的功能。
+但是一方面由于UE的DataTable还是有比较大的局限性（比如只支持Key-Value型数据且Key只能有一个，我们用了一些trick的方法支持了多key联合索引），另一方面java手夯的输出代码维护起来还是比较复杂。导致后续一些新功能这套输出没有跟上。
+
+后来我们演化除了一套基于模板引擎的的读表代码生成工具 [xres-code-generator][6]，所以我们的读表代码都在往这上面靠。很早先前我们就基于 [xres-code-generator][6] 实现了C++、C#、lua原生、lua-pbc、lua-upb的读取方式并同时用于服务器、Unity客户端，[Unreal Engine（UE）][10]客户端。但是对 [Unreal Engine（UE）][10] 蓝图支持和更流行的 [lua-protobuf][11] 一直没提供官方支持。（之前提供的lua-upb是因为 [upb][12] 是 [protobuf][13] 官方的组件，并提供了 [lua][12] 支持，[xres-code-generator][6] 是支持用户自定义模板的用户可以根据自己的需要自己扩展）。
+
+这次也是补上了这些支持，并且像其他的读取器一样，支持多版本并存，支持自定义loader等等。
+
+## 蓝图支持
+
+### 基础数据读取接口和索引接口
+
+为了减少重复造轮子，我们这里还是复用了整个C++版本的版本管理、索引管理与文件读取和日志接口托管。那么这里需要做的事情就相对简单一些，我们只要实现新的模板来实现生成蓝图类并提取这里面的数据就行了。
+
+由于[Unreal Engine（UE）][10]有一些自己的命名规则和数据类型，这不属于生成代码基础功能，所以我实现了一个单独的模块 `UEExcelUtils.py` 来实现这些转换，后续的模板都可以复用相同的转换规则和类型转换规则。比如把 [protobuf][13] 里默认的 string 类型转 `FString` 时，统一采用 `FString Var = TCHAR_TO_ANSI(*container.var())` 这种形式。
+
+我们举个例子，对于这个协议设置
+
+```protobuf
+message role_upgrade_cfg {
+    option (org.xresloader.msg_description) = "Test role_upgrade_cfg with multi keys";
+
+    option (xrescode.loader) = {
+        file_path : "role_upgrade_cfg.bytes"
+        indexes : {
+            fields : "Id"
+            index_type : EN_INDEX_KL // Key - List index: (Id) => list<role_upgrade_cfg>
+        }
+        indexes : {
+            fields : "Id"
+            fields : "Level"
+            index_type : EN_INDEX_KV // Key - Value index: (Id, Level) => role_upgrade_cfg
+        }
+        tags : "client"
+        tags : "server"
+    };
+
+    uint32 Id        = 1;
+    uint32 Level     = 2;
+    uint32 CostType  = 3 [ (org.xresloader.verifier) = "cost_type", (org.xresloader.field_description) = "Refer to cost_type" ];
+    int64  CostValue = 4;
+    int32  ScoreAdd  = 5;
+
+    map<int32, string> TestMap = 6;
+}
+```
+
+首先，对于外层管理层，我们提供了模板 `UEExcelGroupApi.h.mako` 和 `UEExcelGroupApi.cpp.mako` 生成这样的管理层接口。
+
+```cpp
+UCLASS(Blueprintable, BlueprintType)
+class EXCELLOADER_API UExcelLoaderConfigGroupWrapper : public UObject
+{
+    GENERATED_BODY()
+
+public:
+    UExcelLoaderConfigGroupWrapper();
+
+    /**
+      * @brief Bind to a config group
+      * @note It's a internal function, please don't call it
+      * @param ConfigGroup config group
+      */
+    void _InternalBindConfigGroup(const std::shared_ptr<excel::config_group_t>& ConfigGroup);
+
+
+    // ======================================== UExcelLoaderRoleUpgradeCfg ========================================
+    // ---------------------------------------- role_upgrade_cfg ----------------------------------------
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetRoleUpgradeCfg_SizeOf_Id();
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    TArray<UExcelLoaderRoleUpgradeCfg*> GetAllRoleUpgradeCfg_Of_Id();
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    TArray<UExcelLoaderRoleUpgradeCfg*> GetRowRoleUpgradeCfg_AllOf_Id(int64 Id, bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    UExcelLoaderRoleUpgradeCfg* GetRowRoleUpgradeCfg_Of_Id(int64 Id, int64 Index, bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetRoleUpgradeCfg_SizeOf_IdLevel();
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    TArray<UExcelLoaderRoleUpgradeCfg*> GetAllRoleUpgradeCfg_Of_IdLevel();
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    UExcelLoaderRoleUpgradeCfg* GetRowRoleUpgradeCfg_Of_IdLevel(int64 Id, int64 Level, bool& IsValid);
+
+private:
+    std::shared_ptr<excel::config_group_t> config_group_;
+};
+```
+
+可以看到，首先我们数据生命周期会绑定一个配置组。这个配置组其实就是对应了一个版本的数据。其他的接口可以看到是基本和C++接口保持一致的，只是数据类型和生命周期管理换成了UE的，并且和大多数UE组件代码的设计模式一样，函数尾部增加了 `bool& IsValid` 的传出参数用来区分返回数据是否有效。
+上面的例子既包含Key-List的接口输出，也包含Key-Value的接口输出。为了保证实际数据生命周期的有效性，我们会对返回的类型实例先绑定数据行的生命周期，具体实现如下:
+
+```cpp
+EXCELLOADER_API UExcelLoaderRoleUpgradeCfg* UExcelLoaderConfigGroupWrapper::GetRowRoleUpgradeCfg_Of_IdLevel(int64 Id, int64 Level, bool& IsValid)
+{
+    if(!config_group_)
+    {
+        IsValid = false;
+        return nullptr;
+    }
+
+    auto item = config_group_->role_upgrade_cfg.get_by_id_level(static_cast<uint32_t>(Id), static_cast<uint32_t>(Level));
+    if (!item)
+    {
+        IsValid = false;
+        return nullptr;
+    }
+
+    IsValid = true;
+    UExcelLoaderRoleUpgradeCfg* Value = NewObject<UExcelLoaderRoleUpgradeCfg>();
+    Value->_InternalBindLifetime(std::static_pointer_cast<const ::google::protobuf::Message>(item), *item);
+    return Value;
+}
+```
+
+然后再来看生成的具体类型的接口:
+
+```cpp
+UCLASS(Blueprintable, BlueprintType)
+class EXCELLOADER_API UExcelLoaderRoleUpgradeCfg : public UObject
+{
+    GENERATED_BODY()
+
+public:
+    UExcelLoaderRoleUpgradeCfg();
+
+    /**
+      * @brief Bind to a config item to keep lifeime and bind to the real config message
+      * @note It's a internal function, please don't call it
+      * @param Lifetime config group
+      * @param CurrentMessage real message of UExcelLoaderRoleUpgradeCfg
+      */
+    void _InternalBindLifetime(std::shared_ptr<const ::google::protobuf::Message> Lifetime, const ::google::protobuf::Message& CurrentMessage);
+
+    /**
+      * @brief Get the internal message pointer
+      * @note It's a internal function, please don't call it
+      * @return The binded internal message pointer of type role_upgrade_cfg
+      */
+    const ::google::protobuf::Message* _InternalGetMessage() const;
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetId(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetLevel(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetCostType(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetCostValue(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int32 GetScoreAdd(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    int64 GetTestMapSize();
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg")
+    FString FindTestMap(int32 Index, bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfg Get All Of TestMap")
+    TArray<UExcelLoaderRoleUpgradeCfgTestMapEntry*> GetAllOfTestMap();
+
+
+private:
+    // The real message type is role_upgrade_cfg
+    const ::google::protobuf::Message* current_message_;
+    std::shared_ptr<const ::google::protobuf::Message> lifetime_;
+};
+```
+
+首先可以看到，这里生命周期持有引用的是 `std::shared_ptr<const ::google::protobuf::Message>` ，为什么不是 `std::shared_ptr<const 实际类型>` 呢?
+
+```cpp
+UCLASS(Blueprintable, BlueprintType)
+class EXCELLOADER_API UExcelLoaderRoleUpgradeCfgTestMapEntry : public UObject
+{
+    GENERATED_BODY()
+
+public:
+    UExcelLoaderRoleUpgradeCfgTestMapEntry();
+
+    /**
+      * @brief Bind to a config item to keep lifeime and bind to the real config message
+      * @note It's a internal function, please don't call it
+      * @param Lifetime config group
+      * @param CurrentMessage real data pointer of ::google::protobuf::Map<int32_t, std::string>::const_pointer
+      */
+    void _InternalBindLifetime(std::shared_ptr<const ::google::protobuf::Message> Lifetime, const void* CurrentMessage);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfgTestMapEntry")
+    int32 GetKey(bool& IsValid);
+
+    UFUNCTION(BlueprintCallable, Category = "Excel Config UExcelLoaderRoleUpgradeCfgTestMapEntry")
+    FString GetValue(bool& IsValid);
+
+
+private:
+    // The real message type is ::google::protobuf::Map<int32_t, std::string>::const_pointer
+    const void* current_message_;
+    std::shared_ptr<const ::google::protobuf::Message> lifetime_;
+};
+```
+
+### 蓝图对于Enum的限制问题
+
+### 第二套接口 - 简化蓝图类和protobuf原生类型互转
+
+## lua-protobuf支持
+
+[1]: https://xresloader.atframe.work/
+[2]: https://github.com/xresloader/xresloader
+[3]: https://github.com/xresloader/xresconv-cli
+[4]: https://github.com/xresloader/xresconv-gui
+[5]: https://github.com/xresloader/xresconv-conf
+[6]: https://github.com/xresloader/xres-code-generator
+[7]: https://github.com/xresloader/xresloader-dump-bin
+[8]: https://github.com/xresloader/xresloader-protocol
+[9]: https://github.com/xresloader/xresloader-docs
+[10]: https://www.unrealengine.com/
+[11]: https://github.com/starwing/lua-protobuf
+[12]: https://github.com/protocolbuffers/upb
+[13]: https://github.com/protocolbuffers/protobuf
